source/formulaforce/main/objects/TrackLapRecords__mdt/TrackLapRecords__mdt.object-meta.xml
<CustomObject>
    <label>Track Lap Record</label>
    <pluralLabel>Track Lap Records</pluralLabel>
</CustomObject>