source/formulaforce/main/objects/TrackLapRecords__mdt/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <label>Driver Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>