source/formulaforce/main/objects/TrackLapRecords__mdt/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>